--- a/index.html
+++ b/index.html
@@ -10,56 +10,56 @@
 			margin: 0;padding: 0;list-style: none;
 		}
 		.wheel{
-			width: 100%;height: 200px;
-			border: 1px solid red;
+			width: 100%;height: 600px;
 			overflow: hidden;
 		}
 		.box{
 			width: 500%;
 			height: 100%;
-			border: 1px solid blue;
 		}
 		.box a{
 			width: 20%;
 			height: 100%;
-			font-size: 30px;
-			color: red;
-			text-align: center;
-			line-height: 200px;
 			float: left;
 		}
 		.box a:nth-child(1){			
-			background: green;
+			background: url(img/11.jpg);
+			background-size: 100% 600px;
 		}
 		.box a:nth-child(2){			
-			background: blue;
+			background: url(img/22.jpg);
+			background-size: 100% 600px;
 		}
 		.box a:nth-child(3){			
-			background: plum;
+			background: url(img/33.jpg);
+			background-size: 100% 600px;
 		}
 		.box a:nth-child(4){			
-			background: orange;
+			background: url(img/44.jpg);
+			background-size: 100% 600px;
 		}
 		.box a:nth-child(5){			
-			background: pink;
+			background: url(img/55.jpg);
+			background-size: 100% 600px;
 		}
 	</style>
 </head>
 <body>
 	<div class="wheel">
 		<div class="box">
-			<a href="javascript:;">1</a>
-			<a href="javascript:;">2</a>
-			<a href="javascript:;">3</a>
-			<a href="javascript:;">4</a>
-			<a href="javascript:;">5</a>
+			<a href="javascript:;"></a>
+			<a href="javascript:;"></a>
+			<a href="javascript:;"></a>
+			<a href="javascript:;"></a>
+			<a href="javascript:;"></a>
 		</div>
 	</div>
+	
 </body>
 <script>
 	$(function(){
-		var widths=$(window).width();
-		var les=$(".box a").length;
+		var widths=$(window).width();  //获取浏览器的宽度
+		var les=$(".box a").length;    
 		$(".wheel").mousedown(function(e){
 			e.preventDefault();  //阻止浏览器的默认行为
 		})
@@ -68,18 +68,20 @@
 		})
 		var marginL;
 		var num=0;
-		touch.on("body","dragstart",".box",function(e){
+		var obj=document.body.getBoundingClientRect();
+		console.log(obj); //bottom:202  height:202 left:0  right:1366  top:0  width:1366
+		touch.on("body","dragstart",".box",function(e){  //拖动开始
 			$(".box").css({
 				transition:"null"
 			})
 			marginL=parseInt($(".box").css("marginLeft"))?parseInt($(".box").css("marginLeft")):0;
 		})
-		touch.on("body","drag",".box",function(e){
+		touch.on("body","drag",".box",function(e){  //拖动
 			$(".box").css({
-				marginLeft:marginL+e.x
+				marginLeft:marginL+e.x  //下一次拖拽时，结合上一次的进行拖拽
 			})
 		})
-		touch.on("body","dragend",".box",function(e){
+		touch.on("body","dragend",".box",function(e){   //拖动结束
 			if(Math.abs(e.x)>100){
 				if(e.direction=="left"){
 					num++;
